pyilper (1.8.3) bionic; urgency=medium

  * disable right clicks into an empty directory listing in the drive tab
  * left click on a selected row in the directory listing of the drive tab now deselects it

 -- bionic <achim@trillian>  Wed, 29 Apr 2020 11:54:26 +0200

pyilper (1.8.2) bionic; urgency=medium

  * Python 3.8 compatibility 
  * Corrected the drive name to "HP9114B" in the drive type selection box of the drive tab (hint from Christoph Gießelink)
  * Fixed wrong address view for addresses > 15 and changed device # address view to HP71 style in the virtual HP-IL device status window (courtesy by Christoph Gießelink)
  * Clear device buffers on LIF Image file change and clear disk drive status after successful reading or writing (hint from Christoph Gießelink)

 -- bionic <achim@trillian>  Mon, 03 Feb 2020 10:12:05 +0100

pyilper (1.8.1) bionic; urgency=medium

  * added/improved HP-75 text and lex file support in the file management functions of the drive tab

 -- bionic <achim@trillian>  Fri, 31 May 2019 13:39:08 +0200

pyilper (1.8.0) bionic; urgency=medium

  * added HP2225 thermal printer emulator
  * added HP-75 terminal and keyboard support
  * refactoring in lifexec: moved to the subprocess.run interface
  * minimum required Python version is now 3.5

 -- bionic <achim@trillian.trilldom.lan>  Sun, 30 Dec 2018 12:24:08 +0100

pyilper (1.7.2-ubuntu1) bionic; urgency=medium

  * production 

 -- trusty <achim@trillian.trilldom.lan>  Mon, 20 Aug 2018 08:43:17 +0200

pyilper (1.7.2~beta2) bionic; urgency=medium

  *  beta 1

 -- trusty <achim@trillian.trilldom.lan>  Sat, 04 Aug 2018 10:06:22 +0200

pyilper (1.6.0-ubuntu1) xenial; urgency=medium

  * production

 -- trusty <achim@trillian>  Mon, 27 Nov 2017 12:06:11 +0100

pyilper (1.6.0~beta3) xenial; urgency=medium

  * third beta of 1.6.0 

 -- trusty <achim@trillian>  Sun, 12 Nov 2017 19:44:51 +0100

pyilper (1.6.0~beta2) xenial; urgency=medium

  * second beta of 1.6.0
