@@ -33,6 +33,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <ul class="w3-ul">
 <li>Disable right clicks into an empty directory listing in the drive tab.</li>
 <li>Left click on a selected row in the directory listing now deselects it.</li>
+<li>Fix a bug that the file management controls in the drive tab were not disabled if no valid version of the <i>LIFUTILS</i> was installed.</li>
+<li>Fix that some error messages of the <i>LIFUTILS</i> were not shown in the graphical user interfaces</li>
 </ul>
 <!-- End content -->
 
